# research-agent

./: .env.example  .gitignore  README.md  architecture.md  orchestration.md  pyproject.toml  reference-workflow.md  skill-taxonomy.md
examples/: mercadolibre_fashion_request.json  mercadolibre_request.json  rappi_request.json
micro-skills/: abstract-signal-to-concrete-spec.md  assembly-without-rescoring.md  brief-to-client-frame.md  catalog-to-presentation.md  cross-lane-synthesis-with-conflict-visibility.md  evidence-to-tier-decision.md  feedback-to-differentiation-opportunity.md  lane-evidence-pack-builder.md  lane-local-signal-judgment.md  preserve-ambiguity-before-judgment.md  proxy-data-with-visible-confidence-penalty.md  retailer-assortment-to-market-context.md
skills/: 00_client_profile.md  00a_market_assortment_intake.md  01_data_extraction.md  02_trend_discovery.md  03_trend_synthesis.md  04_sku_mapping.md  05_sentiment_analysis.md  06_demand_tier_classification.md  07_catalog_assembly.md  data_mapping.md
src/research_agent/: __init__.py  agent.py  artifact_io.py  cli.py  comment_classifier.py  config.py  extractors.py  harness.py  models.py  supply_gap.py  tiktok_vertical.py  validators.py
src/research_agent/connectors/: __init__.py  base.py  ensemble.py  oxylabs.py  serpapi.py  tmapi.py
src/research_agent/managed/: __init__.py  session.py  setup.py
